# rag-proj

./: .gitignore  README.md  pyproject.toml  requirements.txt
end_to_end_rag/: embed.py  get_vector_db.py  query.py  requirements.txt
notebook/: document.ipynb  pdf_loader.ipynb
project1/: main.py
project1/notebook/: document.ipynb  pdf_loader.ipynb
rag_venv/: pyvenv.cfg
rag_venv/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
semanticspan/: .gitignore  README.md  app.py  get_vector_db.py
semanticspan/chroma/: chroma.sqlite3
