[project]
name = "rag-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
platform = "win_amd64"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-community",
    "pypdf",
    "pymupdf",
    "sentence-transformers",
    "faiss-cpu",
    "chromadb",
    "langchain-groq",
    "python-dotenv",
    "typesense",
    "langchain-openai",
    "langgraph",
    "onnxruntime==1.23.1",
    "ipykernel>=6.22.0,<7",
    "streamlit>=1.50.0",
]

